Work around stacking bug on Safari.

--- a/web/pwa/src/app/tabs/tabs.page.scss
+++ b/web/pwa/src/app/tabs/tabs.page.scss
@@ -31,6 +31,10 @@ ion-tab-bar.disabled {
     overflow-x: auto;
 }
 
+.stacking-fix {
+    transform: translateX(0);
+}
+
 ion-icon {
     font-size: 25px;
 }
